--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://akshay:Akshay1018Gupta@cluster10.cnoe7bt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster10;
+MONGO_URI = mongodb+srv://akshayguptaakki05:Akshay10@cluster10.z7xhuzz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster10
